<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_fondo_principal"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.acceso.LoginFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:src="@drawable/img_logo_principal_texto" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_esquinas_redondeadas_acceso"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Inicio de Sesión"
            android:textColor="@color/acento"
            android:textSize="35sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_nombre_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/bg_esquinas_redondas_edittext"
            android:contentDescription="Campo para ingresar tu correo electrónico"
            android:drawableStart="@drawable/ic_usuario"
            android:drawablePadding="7dp"
            android:hint="@string/entrada_usuario"
            android:importantForAutofill="yes"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColorHint="@android:color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_contrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/bg_esquinas_redondas_edittext"
            android:contentDescription="Campo para ingresar tu contraseña"
            android:drawableStart="@drawable/ic_contrasena"
            android:drawablePadding="10dp"
            android:hint="@string/entrada_contrasena"
            android:importantForAutofill="yes"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColorHint="@android:color/white"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/secundario"
                android:contentDescription="Botón para iniciar sesión"
                android:text="@string/action_sign_in"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_registro"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/acento"
                android:contentDescription="Botón para registrarse"
                android:text="@string/action_registro"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>


    <ProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="Indicador de carga mientras se valida el inicio de sesión"
        android:visibility="gone" />
</LinearLayout>