<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_fondo_principal"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.acceso.SignUpFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:src="@drawable/img_logo_principal_texto" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_esquinas_redondeadas_fondo"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Registro de Usuarios"
            android:textColor="@color/acento"
            android:textSize="35sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/bg_esquinas_redondas_elementos"
            android:contentDescription="Campo para ingresar un nombre de usuario"
            android:drawableStart="@drawable/ic_usuario"
            android:drawablePadding="7dp"
            android:hint="@string/entrada_usuario"
            android:importantForAutofill="yes"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="@color/acento"
            android:textColorHint="@android:color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/bg_esquinas_redondas_elementos"
            android:contentDescription="Campo para ingresar una contraseña"
            android:drawableStart="@drawable/ic_contrasena"
            android:drawablePadding="10dp"
            android:hint="@string/entrada_contrasena"
            android:importantForAutofill="yes"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/acento"
            android:textColorHint="@android:color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/bg_esquinas_redondas_elementos"
            android:contentDescription="Campo para ingresar el correo de contacto"
            android:drawableStart="@drawable/ic_correo"
            android:drawablePadding="10dp"
            android:hint="@string/entrada_correo"
            android:importantForAutofill="yes"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/acento"
            android:textColorHint="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="Accesibilidad por comandos de voz"
            android:textColor="@color/acento"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/grupo_accesibilidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_activa"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Activa"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radio_inactiva"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Inactiva"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="Tipo de Usuario"
            android:textColor="@color/acento"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/grupo_tipo_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_alumno"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Alumno"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radio_docente"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Docente"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_regresar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/secundario"
                android:contentDescription="Botón para regresar a la pantalla anterior"
                android:text="Regresar"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_registro"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/acento"
                android:contentDescription="Botón para registrar al nuevo usuario"
                android:text="Registrar"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="Indicador de carga mientras se realiza el registro"
        android:visibility="gone" />
</LinearLayout>
